--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
                                 </div>
                                 <nav class="hidden md:flex space-x-6">
                                     <a
-                                        href="#"
+                                        href="https://t-regruha.github.io/"
                                         class="text-slate-300 hover:text-primary-400 transition-colors duration-200 font-medium"
                                     >
                                         Главная
