--- a/Torrent/index.html
+++ b/Torrent/index.html
@@ -996,7 +996,7 @@
                                     <span class="material-symbols-outlined text-primary-400 text-4xl">schedule</span>
                                 </div>
                                 <h2 class="text-3xl font-bold text-slate-200 mb-4">
-                                    Репак ещё не готов, будьте в курсе новостей в нашем дискорд сервере!
+                                    Скачка через торрент времмено не работает, будьте в курсе новостей в нашем дискорд сервере!
                                 </h2>
                                 <div class="flex justify-center mt-6">
                                     <a
