--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
                                 </h2>
                                 <div class="flex justify-center mt-6">
                                     <a
-                                        href="https://discord.gg/8VBrkhYjHe"
+                                        href="https://discord.gg/pNTFUHpetH"
                                         class="bg-[#5865F2] hover:bg-[#4752c4] text-white px-6 py-3 rounded-lg font-medium transition-colors duration-200 flex items-center gap-2"
                                     >
                                         <i class="fa-brands fa-discord text-xl"></i>
@@ -1028,7 +1028,7 @@
                                 </p>
                                 <div class="flex items-center space-x-3">
                                     <a
-                                        href="https://discord.com"
+                                        href="https://discord.gg/pNTFUHpetH"
                                         class="bg-slate-800 hover:bg-slate-700 text-[#5865F2] hover:text-white w-8 h-8 rounded-full flex items-center justify-center transition-all duration-200"
                                     >
                                         <i class="fa-brands fa-discord"></i>
