--- a/Torrent/index.html
+++ b/Torrent/index.html
@@ -908,7 +908,7 @@
                                     </span>
                                 </div>
                                 <a
-                                    href="https://discord.gg/8VBrkhYjHe"
+                                    href="https://discord.gg/pNTFUHpetH"
                                     class="bg-[#5865F2] hover:bg-[#4752c4] text-white px-3 py-2 rounded-lg font-medium transition-colors duration-200 flex items-center gap-2"
                                 >
                                     <i class="fa-brands fa-discord text-lg"></i>
